# BitNBuild-25_TechTitans

./: .gitignore  README.md
backend/: app.py  classify3.ipynb  classify3.py  offline_model.py  pyproject.toml  rake_keywords.py  request.py  review_radar_api.ipynb
review-radar/: README.md  manifest.json  package.json  tailwind.config.js
review-radar/src/: content.js
review-radar/src/popup/: chart.js  popup.css  popup.html  popup.js
review-radar/src/popup/charts/: sentiment-pie.js  trend-chart.js
